--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@netlify/plugin-lighthouse": "^6.0.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
