--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@netlify/plugin-lighthouse": "^6.0.0",
     "next": "^14.1.1",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
